# tools

./: .gitignore  Cargo.toml  Makefile  build.sh  package.json
data/: dfcolor.csv  dfcolor.txt  named_colors.csv
public/dfcolor/: index.html
src/: color.rs  lib.rs  main.rs
src/tools/: dfcolor.rs  empty_tool.rs  mod.rs
src/util/: dfcolor.rs  mod.rs  named_color.rs
static/: index.html
static/css/: dfcolor.css  minecraft-font.css
templates/dfcolor/: index.html
