[package]
name = "tk2217-tools"
authors = ["tk2217"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.9"
log = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"]}
tera = "1"
thiserror = "1"
walkdir = "2"